--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <div class="logo">
-    <img src="/Pokedex/assets/logo.png" class="logo_logo" alt="pokemon">
+    <img src="assets/logo.png" class="logo_logo" alt="pokemon">
   </div>
 
 
